[gd_scene load_steps=5 format=3 uid="uid://dfqauvgvylk35"]

[ext_resource type="Script" path="res://src/ui/components/scripts/number_box.gd" id="1_qs1ro"]
[ext_resource type="PackedScene" uid="uid://cxbgd6gmhxcra" path="res://src/ui/components/scenes/button_with_icon.tscn" id="2_mf2s6"]
[ext_resource type="Texture2D" uid="uid://cvea3vwxwgtht" path="res://src/ui/assets/icons/Arrow Up.png" id="2_vkyoe"]
[ext_resource type="Texture2D" uid="uid://csnuaygd6x8hc" path="res://src/ui/assets/icons/Arrow Down.png" id="3_3srsq"]

[node name="NumberBox" type="LineEdit"]
offset_right = 52.3125
offset_bottom = 25.0
virtual_keyboard_enabled = false
select_all_on_focus = true
script = ExtResource("1_qs1ro")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="UpButton" parent="HBoxContainer/VBoxContainer" instance=ExtResource("2_mf2s6")]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
image = ExtResource("2_vkyoe")
margin = 1

[node name="DownButton" parent="HBoxContainer/VBoxContainer" instance=ExtResource("2_mf2s6")]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
image = ExtResource("3_3srsq")
margin = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="text_changed" from="." to="." method="_on_text_changed"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/UpButton" to="." method="_on_up_button_button_down"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/UpButton" to="." method="_on_up_button_button_up"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/DownButton" to="." method="_on_down_button_button_down"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/DownButton" to="." method="_on_down_button_button_up"]
